typescript/checker/tests/conformance/parser/ecmascript5/Statements/BreakStatements/parser_breakNotInIterationOrSwitchStatement2.ts.stderr
error: TS1105
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/BreakStatements/parser_breakNotInIterationOrSwitchStatement2.ts:3:5
  |
3 |     break;
  |     ^^^^^^

